# OpenFace

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  OpenFace.sln  appveyor.yml
exe/FaceLandmarkImg/: FaceLandmarkImg.vcxproj
exe/FaceLandmarkVid/: FaceLandmarkVid.vcxproj
exe/FaceLandmarkVidMulti/: FaceLandmarkVidMulti.vcxproj
exe/FeatureExtraction/: FeatureExtraction.vcxproj
exe/Recording/: Recording.vcxproj
lib/intel/: CLNFModelTemplate.cpp  CLNFModelTemplate.h  CMakeLists.txt  Face.h  FaceAnalyzer.cpp  FaceAnalyzer.h  JSBinding.cpp  SimpleFace.cpp  SimpleFace.h  build.txt  jsnihelper_dummy.c  test.cpp  test_new.cpp  videorendererinterface.h
lib/intel/app/: manifest.json  model
lib/intel/app/src/: FaceDetector.js  Main.js  ServerView.js  UsernameView.js  ergo.js
lib/intel/server/: cert.pem  index.js  key.pem  package.json
lib/intel/server/api/: Room.js
lib/local/FaceAnalyser/: FaceAnalyser.vcxproj
lib/local/LandmarkDetector/: LandmarkDetector.vcxproj
lib/local/LandmarkDetector/include/: LandmarkDetectorModel.h
lib/local/LandmarkDetector/src/: LandmarkDetectorModel.cpp
